# fastann

./: CMakeLists.txt  LICENSE.txt  Makefile  README.txt  dist_l2.cpp  dist_l2.hpp  dist_l2_funcs.hpp  dist_l2_funcs_exp.asm  dist_l2_funcs_exp_32.asm  dist_l2_funcs_exp_64.asm  fastann.cpp  fastann.h  fastann.hpp  nn_kdtree.hpp  nn_shash.hpp  perf_dist_l2.cpp  perf_kdtree.cpp  rand_point_gen.hpp  randomkit.c  randomkit.h  test_dist_l2.cpp
examples/: Makefile  example1.cpp  test.py
interfaces/python/: fastann.py  setup.py
